--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "palermo = None\n",
-    "palermo=neighbors"
+    "palermo=neighborhoods[0]"
    ]
   },
   {
