--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,8 @@
    "outputs": [],
    "source": [
     "palermo = None\n",
-    "palermo=neighborhoods[0]"
+    "palermo=neighborhoods[0]\n",
+    "neighborho"
    ]
   },
   {
