--- a/index.ipynb
+++ b/index.ipynb
@@ -91,12 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "la_boca = None\n",
-    "la_boca=neighborhoo"
+    "la_boca=neighborhoods[-1]"
    ]
   },
   {
