--- a/index.ipynb
+++ b/index.ipynb
@@ -141,7 +141,7 @@
    "outputs": [],
    "source": [
     "ba_latitude = None\n",
-    "ba_latitude = coordinate"
+    "ba_latitude = coordinates[0]"
    ]
   },
   {
