Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -150,7 +150,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ba_longitude = None"
+    "ba_longitude = None\n",
+    "ba_longitude"
    ]
   },
   {
