Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -151,7 +151,7 @@
    "outputs": [],
    "source": [
     "ba_longitude = None\n",
-    "ba_longitude"
+    "ba_longitude = coordinates[1]"
    ]
   },
   {
