--- a/index.ipynb
+++ b/index.ipynb
@@ -416,7 +416,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = None"
+    "la_boca_marker = None\n",
+    "la_boca_marker = "
    ]
   },
   {
