--- a/index.ipynb
+++ b/index.ipynb
@@ -417,7 +417,7 @@
    "outputs": [],
    "source": [
     "la_boca_marker = None\n",
-    "la_boca_marker = neighborhood_marker"
+    "la_boca_marker = neighborhood_markers[5]"
    ]
   },
   {
