--- a/index.ipynb
+++ b/index.ipynb
@@ -512,7 +512,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recoleta_marker = None\n"
+    "recoleta_marker = None\n",
+    "la_boca_marker = neighborhood_markers[5]"
    ]
   },
   {
